--- a/index.html
+++ b/index.html
@@ -77,7 +77,15 @@
         const audienceVideos = {
             "Audience of 0": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N0-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=8D5ZJjV-9No", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N0-CF" },
             "Audience of 1": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N1-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=L61TY-lVWYc", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N1-CF" },
-            // ... add remaining audience videos here
+            "Audience of 2": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N2-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=jisLJabMOaw", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N2-CF" },
+            "Audience of 4": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N4-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=583YioSTgGE", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N4-CF" },
+            "Audience of 9": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N9-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=7AS7NEA9PFo", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N9-CF" },
+            "Audience of 16": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N16-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=_y-lSw1SNaU", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N16-CF" },
+            "Audience of 25": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N25-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=CBBwXbX5ogE", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N25-CF" },
+            "Audience of 50": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N50-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=RUnKCfWFSfI", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N50-CF" },
+            "Audience of 100": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N100-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=ww986pYF46E", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N100-CF" },
+            "Audience of 500": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N500-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=S3Ve7FGfjWk", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N500-CF" },
+            "Audience of 1000s": { DefaultOption: "https://player.virtualrealitypublicspeaking.com/?video=N10K-CF", AndroidAndLaptopSafe: "https://www.youtube.com/watch?v=jyUNFPBmJkA", iPhoneSafe: "https://testing.virtual-reality-publics-peaking-player.pages.dev/?video=N10K-CF" }
         };
 
         // Special Scenarios
